--- a/src/index.scss
+++ b/src/index.scss
@@ -7,5 +7,5 @@
 }
 body{
     font-family: 'Sen', sans-serif;
-    font-family: 'Work Sans', sans-serif;
+    // font-family: 'Work Sans', sans-serif;
 }
