--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,6 +3,9 @@
     background: #fff;
     box-shadow: 3px 0px 20px rgba(0,0,0,0.04);
     z-index: 9999;
+    position: fixed;
+    top: 0;
+    left:0;
     .navbar-wrapper{
         width: 100%;
         display: flex;
