--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -5,8 +5,6 @@
     
     .wrapper{
         padding-top: 8rem;
-        padding-left:30px;
-        padding-right:30px;
         overflow-y: scroll;
         width:100%;
         height: 100%;
@@ -24,6 +22,28 @@
                 font-family: 'Work Sans', sans-serif;
                 color: #545f7d;
                 font-weight:500;
+                display:block;
+                padding:5px 30px;
+            }
+
+            ul{
+                list-style: none;
+                width:100%;
+                li{
+                    width:100%;
+                    a{
+                        padding: 10px 30px;
+                        text-decoration:none;
+                        color: #213f7d;
+                        font-size:16px;
+                        font-weight:400;
+                        display: block;
+                        font-family: 'Work Sans', sans-serif;
+                        &:hover{
+                            background: rgba(57, 205, 205, 0.1);
+                        }
+                    }
+                }
             }
         }
     }
