--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -16,9 +16,8 @@
         .logo{
             display: flex;
             align-items: center;
-            justify-content: center;
+            width: 300px;
             img{
-                width: 100%;
                 height: 30px;
                 object-fit: contain;
             }
@@ -26,7 +25,8 @@
         .search-container{
             display: flex;
             align-items: center;
-            width:100%;
+            width: calc(100% - 300px);
+            margin-left: 60px;
             form{
                 width: 400px;
                 display: flex;
