--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -10,11 +10,20 @@
         height: 100%;
         display:flex;
         flex-direction:column;
-        gap:2rem;
+        gap: 1rem;
 
         div{
             display:flex;
             flex-direction: column;
+            p{
+                display: flex;
+                align-items: center;
+                padding: 0 0 0 20px;
+                color: #213f7d;
+                img{
+                    padding: 0 0.7rem;
+                }
+            }
 
             h4{
                 text-transform: uppercase;
@@ -37,13 +46,25 @@
                         color: #213f7d;
                         font-size:16px;
                         font-weight:400;
-                        display: block;
+                        display: flex;
+                        align-items: center;
                         font-family: 'Work Sans', sans-serif;
+                        border-left: 3px solid transparent;
                         &:hover{
                             background: rgba(57, 205, 205, 0.1);
+                            border-left: 3px solid #39cdcd;
+                        }
+                        img{
+                            padding-right: 0.7rem;
                         }
                     }
                 }
+            }
+            .version{
+                font-size: 12px;
+                color: #213f7d;
+                padding-left: 33px;
+                margin-top: 15px;
             }
         }
     }
