--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -32,7 +32,7 @@
                 color: #545f7d;
                 font-weight:500;
                 display:block;
-                padding:5px 30px;
+                padding: 7px 33px;
             }
 
             ul{
@@ -43,15 +43,22 @@
                     a{
                         padding: 10px 30px;
                         text-decoration:none;
-                        color: #213f7d;
+                        // color: #213f7d;
+                        color: rgba(33, 64, 125,0.6);
                         font-size:16px;
                         font-weight:400;
                         display: flex;
                         align-items: center;
                         font-family: 'Work Sans', sans-serif;
                         border-left: 3px solid transparent;
+                        &.active{
+                            color: #213f7d;
+                            background: rgba(57, 205, 205, 0.1);
+                            border-left: 3px solid #39cdcd;
+                        }
                         &:hover{
                             background: rgba(57, 205, 205, 0.1);
+                            color: #213f7d;
                             border-left: 3px solid #39cdcd;
                         }
                         img{
@@ -64,8 +71,13 @@
                 font-size: 12px;
                 color: #213f7d;
                 padding-left: 33px;
+                padding-bottom: 0.7rem;
                 margin-top: 15px;
             }
+        }
+        hr{
+            border: 1px solid rgba(33, 64, 125, 0.1);
+            margin-top: 40px;
         }
     }
 }
