--- a/src/components/userCard/userCard.scss
+++ b/src/components/userCard/userCard.scss
@@ -4,6 +4,7 @@
     padding: 20px 30px;
     padding-right: 0;
     border-radius: 4px;
+    border: 1px solid rgba(33, 63, 125, 0.06);
     box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
     .img-container{
         width: 40px;
