--- a/src/components/usersTable/usersTable.scss
+++ b/src/components/usersTable/usersTable.scss
@@ -26,7 +26,12 @@ table{
             td{
                 font-size: 14px;
                 padding: 23px 0;
-    
+                color: #544f7d;
+                a{
+                    color: #544f7d;
+                    text-decoration: none;
+
+                }
             }
         }
 
