--- a/src/pages/users/users.scss
+++ b/src/pages/users/users.scss
@@ -32,6 +32,10 @@
             box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
             padding: 30px;
         }
+        .pages-container{
+            width: 100%;
+            margin-top: 23px;
+        }
     }
 
 }
