--- a/src/pages/userDetails/userDetails.scss
+++ b/src/pages/userDetails/userDetails.scss
@@ -6,8 +6,9 @@
         text-decoration: none;
         font-size: 16px;
         color: #545f7d;
-        margin-bottom: 32px;
-        width: content-fit;
+        margin-bottom: 30px;
+        width: fit-content;
+        display: block;
         .btn-back{
             display: flex;
             align-items: center;
