--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@
 body {
     font-family: 'Sen', sans-serif;
     // font-family: 'Work Sans', sans-serif;
-    background: #eee;
+    background: #fbfbfb;
 }
 
 ::-webkit-scrollbar {
