--- a/src/components/usersTable/usersTable.scss
+++ b/src/components/usersTable/usersTable.scss
@@ -9,6 +9,9 @@ table{
                 font-size: 12px;
                 font-weight: 600;
                 color: #544f7d;
+                width: 20%;
+                padding-left: 8px;
+                padding-right: 8px;
                 text-align: justify;
                 img{
                     margin-left: 0.5rem;
@@ -27,10 +30,16 @@ table{
                 font-size: 14px;
                 padding: 23px 0;
                 color: #544f7d;
+                width: 20%;
+                padding-left: 8px;
+                padding-right: 8px;
                 a{
                     color: #544f7d;
                     text-decoration: none;
 
+                }
+                &:nth-child(3){
+                    word-break: break-all;
                 }
                 .active{
                     font-size: 14px;
