--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -99,14 +99,17 @@
                     gap: 0.7rem;
                     cursor:pointer;
                     color:#213f7d;
+                    background: transparent;
+                    font-size: 16px;
+                    border: none;
                 }
                 .dropdown-items{
-                    // display: none;
                     position: absolute;
                     top: 100%;
                     z-index: 100;
                     left: -1rem;
                     margin: 0;
+                    margin-top: 1rem;
                     min-width: 100%;
                     background: #fff;
                     padding: 8px 0;
