--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -20,6 +20,9 @@
                 align-items: center;
                 padding: 0 0 0 20px;
                 color: #213f7d;
+                &.expanded{
+                    cursor: pointer;
+                }
                 img{
                     padding: 0 0.7rem;
                 }
@@ -40,6 +43,24 @@
                 width:100%;
                 li{
                     width:100%;
+                    
+                    .expanded-items{
+                        cursor: pointer;
+                        display: block;
+                        padding: 8px;
+                        padding-left: 60px;
+                        color: rgba(33, 64, 125,0.6);
+                        font-size: 16px;
+                        font-weight: 400;
+                        border-left: 3px solid transparent;
+                        background: #fbfbfb;
+                        &:hover{
+                            transition: all 0.2s ease-in-out;
+                            color: #213f7d;
+                            background: rgba(57, 205, 205, 0.1);
+                            border-left: 3px solid #39cdcd;
+                        }
+                    }
                     a{
                         padding: 10px 30px;
                         text-decoration:none;
