--- a/src/pages/userDetails/userDetails.scss
+++ b/src/pages/userDetails/userDetails.scss
@@ -23,6 +23,12 @@
         align-items: center;
         margin-bottom: 40px;
         justify-content: space-between;
+        @media screen and (max-width: 768px){
+            flex-direction: column;
+            align-items: start;
+            gap: 1rem;
+            margin-bottom: 20px;
+        }
 
         h1 {
             font-size: 24px;
@@ -72,6 +78,7 @@
 
                 width: 100%;
                 box-sizing: border-box;
+                
 
                 .profile {
                     display: flex;
@@ -80,6 +87,12 @@
                     padding-bottom: 40px;
                     padding-left: 30px;
                     width: 100%;
+                    @media screen and (max-width: 768px){
+                        padding: 5px;
+                        padding-top: 10px;
+                        display: grid;
+                        grid-template-columns: repeat(2, 1fr);
+                    }
 
                     .img-wrapper {
                         width: 100px;
@@ -102,6 +115,9 @@
                         padding-right: 30px;
                         border-right: 1px solid rgba(33, 63, 125, 0.1);
                         height: 80px;
+                        @media screen and (max-width: 768px){
+                            padding: 20px;
+                        }
 
                         p {
                             font-size: 14px;
@@ -125,6 +141,9 @@
                         border-right: 1px solid rgba(33, 63, 125, 0.1);
                         height: 80px;
                         justify-content: center;
+                        @media screen and (max-width: 768px){
+                            padding: 20px;
+                        }
 
                         &:last-child {
                             border: none;
@@ -157,8 +176,14 @@
                     display: flex; 
                     width: 100%;
                     justify-content: space-evenly;
+                    @media screen and (max-width: 768px){
+                        overflow-x: scroll;
+                        justify-content: start;
+                        margin-top: 1rem;
+                    }
 
                     li {
+                        
                         .tab-btn{
                             padding: 0 20px 10px;
                             text-decoration: none;
@@ -169,6 +194,9 @@
                             border:none;
                             background: transparent;
                             border-bottom: 2px solid transparent;
+                            @media screen and (max-width: 768px){
+                                width: max-content;
+                            }
                             &:hover{
                                 border-bottom: 2px solid #39cdcc;
                                 color: #39cdcc;
