--- a/src/components/userCard/userCard.scss
+++ b/src/components/userCard/userCard.scss
@@ -6,6 +6,9 @@
     border-radius: 4px;
     border: 1px solid rgba(33, 63, 125, 0.06);
     box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
+    @media screen and (max-width: 768px){
+        padding: 20px;
+    }
     .img-container{
         width: 40px;
         height: 40px;
