--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -7,6 +7,10 @@
         height:100%;
         display:flex;
         position: relative;
+        @media screen and (max-width: 768px){
+            flex-direction: column;
+            gap: 5rem;
+        }
         .login-left{
             display:flex;
             align-items: center;
@@ -17,10 +21,17 @@
                 top: 60px;
                 left: 97px;
                 width: 150px;
+                @media screen and (max-width: 768px){
+                    top: 20px;
+                    left: 20px;
+                }
             }
             .left-img-wrapper{
                 width:600px;
                 height:300px;
+                @media screen and (max-width: 768px){
+                    display: none;
+                }
                 img{
                     width:100%;
                     object-fit: contain;
@@ -39,6 +50,9 @@
                 width:100%;
                 display:flex;
                 flex-direction:column;
+                @media screen and (max-width: 768px){
+                    padding: 3rem 0;
+                }
                 h2{
                     color: #213f7d;
                     padding-bottom:10px;
