--- a/src/components/usersTable/usersTable.scss
+++ b/src/components/usersTable/usersTable.scss
@@ -1,31 +1,31 @@
 .table-container {
     position: relative;
     box-sizing: border-box;
+    // overflow-x: auto;
+    width: 100%;
     table {
-        width: 100%;
+        width: fit-content;
         border-collapse: collapse;
         text-align: left;
         @media screen and (max-width: 768px) {
-            display: block;
             width: 100%;
             overflow-x: auto;
-            -webkit-overflow-scrolling: touch;
         }
         thead {
+            width: 100%;
             @media screen and (max-width: 768px) {
-                // display: none;
+                
             }
             tr {
+                width: 100%;
                 th {
                     padding-bottom: 30px;
                     text-transform: uppercase;
                     font-size: 12px;
                     font-weight: 600;
                     color: #544f7d;
-                    width: 20%;
                     padding-left: 8px;
                     padding-right: 8px;
-                    text-align: justify;
                     img {
                         margin-left: 0.5rem;
                         cursor: pointer;
@@ -36,7 +36,6 @@
 
         tbody {
             @media screen and (max-width: 768px) {
-                display: block;
                 width: 100%;
             }
             tr {
@@ -45,26 +44,25 @@
                     border: none;
                 }
                 @media screen and (max-width: 768px) {
-                    display: block;
+                    // display: block;
                 }
                 td {
                     font-size: 14px;
                     padding: 23px 0;
                     color: #544f7d;
-                    width: 100px;
                     padding-left: 8px;
                     padding-right: 8px;
                     position: relative;
+                    
                     @media screen and (max-width: 768px) {
-                        display: block;
-                        text-align: right;
+                        
                     }
                     a {
                         color: #544f7d;
                         text-decoration: none;
                     }
                     &:nth-child(3) {
-                        word-break: break-all;
+                        // word-break: break-all;
                     }
                     .active {
                         font-size: 14px;
