--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,123 +1,141 @@
-.sidebar{
-    width: 268px;
-    background: #fff;
-    height: 100vh;
-    transition: all 300ms ease-in-out;;
-    @media screen and (max-width: 768px){
-        width: 0;
-        position: fixed;
-        z-index: 1;
-        &.show-sidebar{
-            width: 50%;
-            transition: all 300ms ease-in-out;
-        }
+.sidebar {
+  width: 268px;
+  background: #fff;
+  height: calc(100vh - 84px);
+  transition: all 300ms ease-in-out;
+  margin-top: 84px;
+
+  @media screen and (max-width: 768px) {
+    height: calc(100vh - 72px);
+    margin-top: 72px;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+
+    &.show-sidebar {
+      width: 50%;
+      transition: all 300ms ease-in-out;
     }
-    
-    .wrapper{
-        padding-top: 8rem;
-        overflow-y: scroll;
-        width:100%;
-        height: 100%;
-        display:flex;
-        flex-direction:column;
-        gap: 1rem;
+  }
 
-        div{
-            display:flex;
-            flex-direction: column;
-            p{
-                display: flex;
-                align-items: center;
-                padding: 0 0 0 20px;
-                color: #213f7d;
-                @media screen and (max-width: 768px){
-                    padding-left: 7px;
-                }
-                &.expanded{
-                    cursor: pointer;
-                }
-                img{
-                    padding: 0 0.7rem;
-                }
-            }
+  .wrapper {
+    padding-top: 1.2rem;
+    padding-bottom: 1rem;
+    overflow-y: scroll;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
-            h4{
-                text-transform: uppercase;
-                font-size: 12px;
-                font-family: 'Work Sans', sans-serif;
-                color: #545f7d;
-                font-weight:500;
-                display:block;
-                padding: 7px 33px;
-            }
+    div {
+      display: flex;
+      flex-direction: column;
 
-            ul{
-                list-style: none;
-                width:100%;
-                li{
-                    width:100%;
-                    
-                    .expanded-items{
-                        cursor: pointer;
-                        display: block;
-                        padding: 8px;
-                        padding-left: 60px;
-                        color: rgba(33, 64, 125,0.6);
-                        font-size: 16px;
-                        font-weight: 400;
-                        border-left: 3px solid transparent;
-                        background: #fbfbfb;
-                        &:hover{
-                            transition: all 0.2s ease-in-out;
-                            color: #213f7d;
-                            background: rgba(57, 205, 205, 0.1);
-                            border-left: 3px solid #39cdcd;
-                        }
-                    }
-                    a{
-                        padding: 10px 30px;
-                        text-decoration:none;
-                        // color: #213f7d;
-                        color: rgba(33, 64, 125,0.6);
-                        font-size:16px;
-                        font-weight:400;
-                        display: flex;
-                        align-items: center;
-                        font-family: 'Work Sans', sans-serif;
-                        border-left: 3px solid transparent;
-                        @media screen and (max-width: 768px){
-                            padding-left: 15px;
-                            padding-right: 15px;
-                        }
-                        &.active{
-                            transition: all 0.2s ease-in-out;
-                            color: #213f7d;
-                            background: rgba(57, 205, 205, 0.1);
-                            border-left: 3px solid #39cdcd;
-                        }
-                        &:hover{
-                            transition: all 0.2s ease-in-out;
-                            background: rgba(57, 205, 205, 0.1);
-                            color: #213f7d;
-                            border-left: 3px solid #39cdcd;
-                        }
-                        img{
-                            padding-right: 0.7rem;
-                        }
-                    }
-                }
-            }
-            .version{
-                font-size: 12px;
-                color: #213f7d;
-                padding-left: 33px;
-                padding-bottom: 0.7rem;
-                margin-top: 15px;
-            }
+      p {
+        display: flex;
+        align-items: center;
+        padding: 0 0 0 20px;
+        color: #213f7d;
+
+        @media screen and (max-width: 768px) {
+          padding-left: 7px;
         }
-        hr{
-            border: 1px solid rgba(33, 64, 125, 0.1);
-            margin-top: 40px;
+
+        &.expanded {
+          cursor: pointer;
         }
+
+        img {
+          padding: 0 0.7rem;
+        }
+      }
+
+      h4 {
+        text-transform: uppercase;
+        font-size: 12px;
+        font-family: 'Work Sans', sans-serif;
+        color: #545f7d;
+        font-weight: 500;
+        display: block;
+        padding: 7px 33px;
+      }
+
+      ul {
+        list-style: none;
+        width: 100%;
+
+        li {
+          width: 100%;
+
+          .expanded-items {
+            cursor: pointer;
+            display: block;
+            padding: 8px;
+            padding-left: 60px;
+            color: rgba(33, 64, 125, 0.6);
+            font-size: 16px;
+            font-weight: 400;
+            border-left: 3px solid transparent;
+            background: #fbfbfb;
+
+            &:hover {
+              transition: all 0.2s ease-in-out;
+              color: #213f7d;
+              background: rgba(57, 205, 205, 0.1);
+              border-left: 3px solid #39cdcd;
+            }
+          }
+
+          a {
+            padding: 10px 30px;
+            text-decoration: none;
+            // color: #213f7d;
+            color: rgba(33, 64, 125, 0.6);
+            font-size: 16px;
+            font-weight: 400;
+            display: flex;
+            align-items: center;
+            font-family: 'Work Sans', sans-serif;
+            border-left: 3px solid transparent;
+
+            @media screen and (max-width: 768px) {
+              padding-left: 15px;
+              padding-right: 15px;
+            }
+
+            &.active {
+              transition: all 0.2s ease-in-out;
+              color: #213f7d;
+              background: rgba(57, 205, 205, 0.1);
+              border-left: 3px solid #39cdcd;
+            }
+
+            &:hover {
+              transition: all 0.2s ease-in-out;
+              background: rgba(57, 205, 205, 0.1);
+              color: #213f7d;
+              border-left: 3px solid #39cdcd;
+            }
+
+            img {
+              padding-right: 0.7rem;
+            }
+          }
+        }
+      }
+
+      .version {
+        font-size: 12px;
+        color: #213f7d;
+        padding-left: 33px;
+        margin-top: 15px;
+      }
     }
+
+    hr {
+      border: 1px solid rgba(33, 64, 125, 0.1);
+      margin-top: 40px;
+    }
+  }
 }
