--- a/src/pages/users/users.scss
+++ b/src/pages/users/users.scss
@@ -1,54 +1,54 @@
 .users-wrapper {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Work Sans', sans-serif;
+  width: 100%;
+  box-sizing: border-box;
+  gap: 40px;
+  position: relative;
+
+  @media screen and (max-width: 768px) {
+    gap: 20px;
+  }
+
+  h1 {
+    font-size: 24px;
+    color: #213f7d;
+    font-weight: 500;
+  }
+
+  .inner-wrapper {
     display: flex;
     flex-direction: column;
-    font-family: 'Work Sans', sans-serif;
-    width: 100%;
-    box-sizing: border-box;
     gap: 40px;
-    @media screen and (max-width: 768px){
+    box-sizing: border-box;
+
+    .card-wrapper {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 26px;
+      width: 100%;
+
+      @media screen and (max-width: 768px) {
+        grid-template-columns: repeat(2, 1fr);
         gap: 20px;
+      }
     }
 
-    h1 {
-        font-size: 24px;
-        color: #213f7d;
-        font-weight: 500;
+    .user-table-wrapper {
+      background: #fff;
+      border-radius: 4px;
+      border: 1px solid rgba(33, 63, 125, 0.06);
+      box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
+      width: 100%;
+      position: relative;
+      overflow: hidden;
     }
 
-    .inner-wrapper {
-        display: flex;
-        flex-direction: column;
-        gap: 40px;
-        box-sizing: border-box;
-
-        .card-wrapper {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 26px;
-            width: 100%;
-            @media screen and (max-width: 768px){
-                grid-template-columns: repeat(2, 1fr);
-                gap: 20px;
-            }
-        }
-
-        .user-table-wrapper {
-            background: #fff;
-            border-radius: 4px;
-            border: 1px solid rgba(33, 63, 125, 0.06);
-            box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
-            padding: 30px;
-            width: 100%;
-            overflow-x: scroll;
-            @media screen and (max-width: 768px){
-                padding: 30px 0;
-                overflow-x: scroll;
-            }
-        }
-        .pages-container{
-            width: 100%;
-            margin-top: 23px;
-        }
+    .pages-container {
+      width: 100%;
+      margin-top: 23px;
     }
+  }
 
 }
