--- a/src/pages/users/components/usersTable/usersTable.scss
+++ b/src/pages/users/components/usersTable/usersTable.scss
@@ -6,7 +6,7 @@
   height: auto;
 
   @media screen and (max-width: 768px) {
-    width: max-content;
+    width: 100%;
     overflow-x: auto;
   }
 
